<resources>
    <string name="app_name">TenatanWeave</string>
    <string name="next">Next</string>
    <string name="sign_out_text">Sign Out</string>
    <string name="previous">Previous</string>
    <string name="title_search_card_query">\'%1$s\'</string>
    <string name="title_single_card">%1$s</string>
    <string name="title_search_card_query_empty">Filtering…</string>
    <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_dashboard_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_notifications_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="toggle_layout_manager">Toggle Layout</string>
    <string name="title_home">Home</string>
    <string name="title_decks">Decks</string>
    <string name="title_new_deck">New Deck Details</string>
    <string name="title_edit_deck">Edit Deck Details</string>
    <string name="title_search">Search</string>
    <string name="title_collection">Collection</string>
    <string name="title_search_card_result">Search Card Results</string>
    <string name="title_cards">Cards</string>
    <string name="title_sets">Sets</string>
    <string name="title_delete">Confirm Deletion</string>

    <string name="message_delete">Are you sure you want to delete \"%1$s\"?</string>

    <string name="label_dialog_message">Message goes here</string>
    <string name="label_ok">OK</string>
    <string name="label_yes">YES</string>
    <string name="label_cancel">CANCEL</string>
    <string name="label_no">NO</string>
    <string name="label_class">Class: </string>
    <string name="label_include_generic">Include Generic: </string>
    <string name="label_type">Type: </string>
    <string name="label_subtype">Sub-Type: </string>
    <string name="label_talent">Talent: </string>
    <string name="label_pitch">Pitch: </string>
    <string name="label_compare">Cost | Power | Defense: </string>
    <string name="label_add">Add</string>
    <string name="label_rarity">Rarity: </string>
    <string name="label_printings">Printings</string>
    <string name="label_rulings">Rulings</string>
    <string name="label_red_version">Red</string>
    <string name="label_yellow_version">Yellow</string>
    <string name="label_blue_version">Blue</string>
    <string name="label_adult_version">Adult</string>
    <string name="label_young_version">Young</string>
    <string name="label_format">Format: </string>
    <string name="label_hero_section">Hero (%1$s)</string>
    <string name="label_equipment_section">Equipment (%1$s)</string>
    <string name="label_equipment_section_regex">Equipment</string>
    <string name="label_pitch_section">Pitch %1$s (%2$s)</string>
    <string name="label_pitch_section_regex">Pitch %1$s</string>
    <string name="home_second">Home Second</string>

    <string name="label_legal">Legal</string>
    <string name="label_not_legal">Not Legal</string>
    <string name="label_banned">Banned</string>

    <string name="cost_chip_text">%s %s</string>

    <string name="variable_power">VARIABLE_POWER</string>
    <string name="variable_defense">VARIABLE_DEFENSE</string>
    <string name="variable_health">VARIABLE_HEALTH</string>
    <string name="variable_value">VARIABLE_VALUE</string>
    <string name="card_name">CARD_NAME</string>

    <string name="cards_in_set_count">Cards: %s</string>
    <string name="printing_count">Count: %s</string>

    <string name="no_hero_selected">No Hero Selected</string>
    <string name="format_none">None</string>

    <string name="card_text">Search Card Text</string>
    <string name="artist">Search by Artist</string>
    <string name="deck_name_text">Deck Name</string>
    <string name="compare_hint">#</string>
    <string name="db_collection_cards">cards</string>
    <string name="db_collection_printings">printings</string>
    <string name="db_collection_rulings">rulings</string>
    <string name="db_collection_sets">sets</string>
    <string name="db_collection_users">users</string>
    <string name="db_collection_decks">decks</string>
    <string name="db_collection_formats">formats</string>
    <string name="db_collection_deckIdSequence">deckIdSequence</string>
    <string name="db_collection_collection">collection</string>
    <string name="db_collection_collection_map">collectionMap</string>
    <string name="web_client_id">315101567709-5h6mobcajdcphhu3obd1kls9pjdd7hv2.apps.googleusercontent.com</string>

    <string name="deck_options_edit">Edit</string>
    <string name="deck_options_delete">Delete</string>
    <string name="deck_options_copy">Copy</string>
    <string name="deck_index">deckIndex</string>
    <string name="card_index">cardIndex</string>
    <string name="card_options_printings">Printings</string>
    <string name="card_options_details">Details</string>
</resources>
